--- a/app/views/estimate_mailer/send_email.text.erb
+++ b/app/views/estimate_mailer/send_email.text.erb
@@ -1,45 +1,44 @@
 <%= @estimate.co%> <%= @estimate.name%>様
 
-この度は自販機ねっとにお問い合わせ頂きありがとうございました。
+この度はファクタリング一括見積りにお問い合わせ頂きありがとうございました。
 
 以下の内容にて承りました。
 
-これより各ベンダー会社とやりとりを進め案件を進行させて頂きます。
+これより各ファクタリング会社とやりとりを進め案件を進行させて頂きます。
 
-設置までの流れについては以下のようになりますので事前にご確認下さいませ。
+取引の流れについては以下のようになりますので事前にご確認下さいませ。
 
-①『自販機ねっと』にて案件内容の確認
-　→ 案件内容によっては、ご担当者様連絡先に確認のお電話を差し上げる場合がございます。
+①『ファクタリング一括見積り』にて案件内容の確認
+　→ 案件内容によっては、ご担当者様連絡先に追加情報確認のお電話を差し上げる場合がございます。
 
-②各社ベンダー会社で現地調査
-　→ 基本的に屋外やセキュリティのない屋内の場合、立ち合い無しで現地調査を進めさせて頂くことが可能となります。
+②各社ファクタリング会社に紹介
+　→ 各ファクタリング会社より、所定の方法で御社にご連絡が入ります。各社の審査方法に基づき、必要書類の依頼やヒアリングがあります。審査落ちを防止するため、必ず各社対応を行うようにしましょう。
 
-③各社お見積もりをまとめご案内
-　→ 各社のお見積もりが出そろった段階で当社にてお見積もり内容をまとめ、ご提案させて頂きます。（約5営業日〜10営業日を頂いております。）
+③各社見積もりの提示
+　→ 各社のお見積もりが出そろった段階で、手数料の比較等を元に、契約を行いましょう
 
-④希望ベンダー会社で設置へ
-　→ 決定したベンダー会社をご紹介させて頂き、詳細を決定後、自販機の設置を行います。
+④契約締結後、現金化
+　→ 契約締結後、売掛金を売却することで、御社の指定の口座に資金が入金されます。
 
 以上、設置までしっかりとサポートさせて頂きますので、よろしくお願い致します。
 
 
 --------------------------
 会社名: <%= @estimate.co%>
-担当者: <%= @estimate.name%>
+担当者名: <%= @estimate.name%>（<%= @estimate.name_kana%>）
 電話番号: <%= @estimate.tel%>
-メールアドレス: <%= @estimate.email%>
-郵便番号: <%= @estimate.postnumber%>
 住所: <%= @estimate.address%>
-設置箇所: <%= @estimate.installation%>
-人数: <%= @estimate.people %>
-自販機の用途: <%= @estimate.chenge %>
-交換前自販機: <%= @estimate.change_before %>
-設置時期: <%= @estimate.period %>
-要望:<%= @estimate.remarks %>
+メールアドレス: <%= @estimate.email%>
+URL: <%= @estimate.url%>
+決算期（法人の場合）: <%= @estimate.settlement%>
+買取希望額: <%= @estimate.price %>
+使用用途: <%= @estimate.use %>
+備考:<%= @estimate.remarks %>
 --------------------------
 
-自販機ねっと
-Mail：info@comicomi.cc
-URL：https://自販機.net/
-所在地：〒104-0061 東京都中央区銀座6-13-16 ヒューリック銀座ウォールビル7F
-問い合わせ時間：10:00-17:00（定休日：土曜日、日曜日、祝日）
+
+株式会社Ri-Plus
+電話番号：050-5480-1131
+Mail：info@ri-plus.jp
+URL：https://ri-plus.jp
+所在地：〒104-0061 東京都中央区銀座一丁目22番11号2階
