--- a/app/views/estimates/thanks.html.slim
+++ b/app/views/estimates/thanks.html.slim
@@ -1,9 +1,12 @@
+- set_meta_tags  title: ''
+- set_meta_tags  description: ''
+
 br
 .tops-wrapper.center
- h1.headline  お見積もり頂きありがとうございます。
+ h1.headline  ファクタリング一括見積を頂きありがとうございます。
 
  p.bold.center
-   | 担当者よりご連絡いたしますので、お待ちくださいませ。
+   | 内容を確認し、問題なければ各ファクタリング会社にご紹介を進めさせて頂きます。内容の不足等御座いましたら、当社担当者よりご連絡させて頂く場合がございます。よろしくお願い致します。
  br
  .center
   = link_to "トップページへ戻る", "/", class:"btn btn-thanks"
