--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -10,9 +10,11 @@ br
     .col-xs-6
         br
         .index-3
-         | 自動販売機の設置・交換を
+         | 最短即日の企業資金調達なら
          br
-         | 一括見積で好条件比較
+         .red
+          | 『ファクタリング一括見積』
+
         br
         p.push
          span
@@ -26,47 +28,76 @@ br
    .col-sm-12.center
      h2.push
       span
-       | 一括見積比較で条件の良い
+       | ファクタリング会社一括見積で
        br
        br
-       | 自動販売機を設置・交換！
+       | 手数料条件を一括比較見積もり！
 br
 
 .row#anchor
    .col-sm-12.center
      h2.surprise
-        | 『自販機ねっと』とは？
+        | 『ファクタリング』とは？
 
 .top-wrapper
- p 『自販機ねっと』は、自動販売機を設置・交換を検討とするユーザー・企業様が最良の条件で自動販売機を設置するサポートをするサイトです。『自販機ねっと』では、全ての自動販売機企業に一括見積を行い、各社の条件をまとめてユーザー・企業様に提供し、問い合わせの手間を無くします。
+ p 『ファクタリング』とは、事業資金を確保したい企業に向けた、今最も注目されている資金現金化サービスです。ファクタリングは、御社が保有する売掛金（請求書）をファクタリング会社がその売掛金を事前に買い取ることで、その入金日を待つこと無く事業資金を確保できるサービスとなります。このサービスは、経済産業省も推奨しており、融資や貸金ではないため、信用情報が傷つくこともありません。
 
  .row.center
    .col-sm-4
-     h3.head 自動販売機設置を各社一括見積り
+     h3.head 即日簡単現金化
      =image_tag 'trouble2.webp', width: '95%', class: 'center'
      br
    .col-sm-4
-     h3.head 条件の良い自動販売機会社を選定
+     h3.head 即日簡単現金化
      =image_tag 'trouble1.webp', width: '95%', class: 'center'
      br
    .col-sm-4
-     h3.head 自動販売機の新規設置以外にも交換もOK
+     h3.head 手軽に申し込める
      =image_tag 'trouble3.webp', width: '95%', class: 'center'
      br
  .row.center
    .col-sm-4
-     h3.head 自販機の設置完了までトータルサポート
+     h3.head 借金を背負わず資金調達
      =image_tag 'trouble4.webp', width: '95%', class: 'center'
      br
    .col-sm-4
-     h3.head 自動販売機設置場所の現地調査手配
+     h3.head 信用情報は関係無し
      =image_tag 'trouble5.webp', width: '95%', class: 'center'
      br
    .col-sm-4
-     h3.head 好みのベンダー会社の設置を依頼したい
+     h3.head 経済産業省も推奨
      =image_tag 'trouble6.webp', width: '95%', class: 'center'
      br
 
+br
+hr.line
+br
+br
+br
+
+.row#anchor
+   .col-sm-12.center
+     h2.surprise
+        | ファクタリング一括見積とは？
+
+.top-wrapper
+ p いざファクタリングを行う際、1社のみに依頼すると、割高な手数料で契約することになってしまったり、審査落ちしてしまい、必要な期日に現金化出来ないと言う大きなリスクが発生します。一括見積サイトを利用することで、複数のファクタリング会社から見積もりを受けることが出来、現金化出来ないリスクの軽減と共に、買取手数料を最安値に抑えることが出来ます。
+
+ .row.center
+   .col-sm-4
+     h3.head 最短で現金化可能な企業選定
+     =image_tag 'trouble2.webp', width: '95%', class: 'center'
+     br
+   .col-sm-4
+     h3.head 最安値の手数料を手軽に探せる
+     =image_tag 'trouble1.webp', width: '95%', class: 'center'
+     br
+   .col-sm-4
+     h3.head 現金化出来ない審査落ちを回避
+     =image_tag 'trouble3.webp', width: '95%', class: 'center'
+     br
+
+br
 br
 hr.line
 br
@@ -77,10 +108,10 @@ br
    .col-sm-12.center
      h2.push
       span
-       | お任せ下さい！あなたに最適な
+       | ファクタリング選定に安心を！
        br
        br
-       | 自動販売機会社をご案内！
+       | 審査落ちを回避し安心資金調達
 br
 br
 hr.line
@@ -100,25 +131,25 @@ br
 .row
    .col-sm-12.center
      h2.surprise
-        | 自動販売機を設置するメリットは？
+        | ファクタリングは借金？
 
 .top-wrapper
- p 『自販機ねっと』は、自動販売機の設置・交換を検討いただけるユーザー・企業様の設置をお手軽にサポートします。ここでは自動販売機を設置するメリットをご紹介します。
+ p 『ファクタリング』を利用頂く際に安心できるのは、【借金ではない】こと。審査はあるものの、貸金業ではないので、負債の情報が信用情報に掲載されたり、法的な借金を背負うリスクが一切ありません。
  br
 
  .row.center
    .col-sm-4
-     h3.head 自販機設置で副収入を永続的に得られる
+     h3.head 借金では無く売掛金の売却
      =image_tag 'image1.webp', width: '95%', class: 'center'
      br
      p.text
    .col-sm-4
-     h3.head フルオペレーションでメンテナンス不要
+     h3.head 貸金と比較し簡単審査と証明のみ
      =image_tag 'image2.webp', width: '95%', class: 'center'
      br
      p.text
    .col-sm-4
-     h3.head 好きなドリンクを手軽に購入できる
+     h3.head 信用情報にも傷がつかない
      =image_tag 'image3.webp', width: '95%', class: 'center'
      br
      p.text
@@ -145,38 +176,29 @@ br
 .row
    .col-sm-12.center
      h2.surprise
-        | 『自販機ねっと』費用について
+        | ファクタリング一括見積の費用
 
 .top-wrapper
  br
  .row.center
    .col-sm-4
-     h3.head 初期費用無料
+     h3.head 一括見積費用無料
      =image_tag 'image10.webp', width: '95%', class: 'center'
      br
    .col-sm-4
-     h3.head 現地調査無料
+     h3.head 仲介手数料無料
      =image_tag 'image11.webp', width: '95%', class: 'center'
      br
    .col-sm-4
-     h3.head 基本立合無
+     h3.head 全国どこでもご利用可能
      =image_tag 'image12.webp', width: '95%', class: 'center'
-     br
- .row.center
-   .col-sm-4
-     h3.head 全国対応可能
-     =image_tag 'image13.webp', width: '95%', class: 'center'
-     br
-   .col-sm-4
-     h3.head 設置費用無料
-     =image_tag 'image14.webp', width: '95%', class: 'center'
      br
 
 br
 .row
   .col-sm-12.center
     h2.surprise
-       | 見積りのカンタン4STEP
+       | 一括見積カンタン4STEP
 
 br
 br
@@ -189,31 +211,33 @@ ul.flow.center
           | STEP.01
         | カンタン60秒見積もり入力
       dd.center
-        | まずは無料一括見積もりでご希望内容や希望の条件をカンタン入力！
+        | まずは一括見積でご希望内容や情報をカンタン入力！
   li
     dl
       dt
         span.icon
           | STEP.02
-        | 現地調査
+        | 確認連絡
       dd.center
-        | 必要に応じて各社が現地調査に入ります。基本設置が屋外であれば対応の必要はございません。
+        | 各社より申込内容確認と各社基準に基づく必要資料の提示依頼があります。
+        br
+        | 審査落ちを防ぐため、必ずそれぞれの企業で提示を行いましょう。
   li
     dl
       dt
         span.icon
           | STEP.03
-        | 各社見積りからベンダー会社を決定
+        | 各社見積りから適正企業を決定
       dd.center
-        | 自販機ねっとが各社の設置条件をまとめてご案内致しますので、ご希望の自動販売機会社をご選択ください。
+        | 手数料・現金化までの日数・契約方法等、総合的に鑑み、御社のニーズに合った企業と契約しましょう。
   li
     dl
       dt
         span.icon
           | STEP.04
-        | 日程調整後、設置作業を行います。
+        | 現金化完了！
       dd.center
-        | 設置においては恐れ入りますが立ち合いをお願いします。
+        | 契約を締結後、手数料を除いた売掛金の金額が口座に入金されます。
 
 
 br
