--- a/app/views/estimate_mailer/client_email.text.erb
+++ b/app/views/estimate_mailer/client_email.text.erb
@@ -12,17 +12,19 @@
 
 --------------------------
 会社名: <%= @estimate.co%>
-郵便番号: <%= @estimate.postnumber%>
+担当者名: <%= @estimate.name%>（<%= @estimate.name_kana%>）
+電話番号: <%= @estimate.tel%>
 住所: <%= @estimate.address%>
-設置箇所: <%= @estimate.installation%>
-人数: <%= @estimate.people %>
-自販機の用途: <%= @estimate.chenge %>
-交換前自販機: <%= @estimate.change_before %>
-設置時期: <%= @estimate.period %>
-要望:<%= @estimate.remarks %>
+メールアドレス: <%= @estimate.email%>
+URL: <%= @estimate.url%>
+決算期（法人の場合）: <%= @estimate.settlement%>
+買取希望額: <%= @estimate.price %>
+使用用途: <%= @estimate.use %>
+備考:<%= @estimate.remarks %>
 --------------------------
 
 株式会社Ri-Plus
-Mail：info@comicomi.cc
-所在地：〒104-0061 東京都中央区銀座6-13-16 ヒューリック銀座ウォールビル7階
-問い合わせ時間：10:00-16:45（定休日：土曜日、日曜日、祝日）
+電話番号：050-5480-1131
+Mail：info@ri-plus.jp
+URL：https://ri-plus.jp
+所在地：〒104-0061 東京都中央区銀座一丁目22番11号2階
