--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -22,3 +22,6 @@ link[href="../css/froala_style.min.css" rel="stylesheet" type="text/css"]
 = favicon_link_tag('favicon.ico')
 javascript:
   | fbq('track', 'ViewContent');
+script[async src="https://www.googletagmanager.com/gtag/js?id=AW-10998015402"]
+script
+ | window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-10998015402');
