--- a/app/views/estimate_mailer/send_email.text.erb
+++ b/app/views/estimate_mailer/send_email.text.erb
@@ -7,21 +7,26 @@
 これより各ファクタリング会社とやりとりを進め案件を進行させて頂きます。
 
 取引の流れについては以下のようになりますので事前にご確認下さいませ。
+__________________________________________________________________________________________
 
-①『ファクタリング一括見積り』にて案件内容の確認
-　→ 案件内容によっては、ご担当者様連絡先に追加情報確認のお電話を差し上げる場合がございます。
+【STEP.01】3~5社のファクタリング会社から自動返信メールが到着
 
-②各社ファクタリング会社に紹介
-　→ 各ファクタリング会社より、所定の方法で御社にご連絡が入ります。各社の審査方法に基づき、必要書類の依頼やヒアリングがあります。審査落ちを防止するため、必ず各社対応を行うようにしましょう。
+頂いた内容を元に、ファクタリング会社の選定を行います。選定後、ファクタリング会社から問い合わせ完了通知が届きます。
+追ってお電話が入りますので、売掛請求書をご準備の上対応お願いします。
+※通過率を上げるため可能であれば全てのファクタリング会社への対応をお願い致します。
 
-③各社見積もりの提示
-　→ 各社のお見積もりが出そろった段階で、手数料の比較等を元に、契約を行いましょう
+【STEP.02】条件の良いファクタリング会社を選定
 
-④契約締結後、現金化
-　→ 契約締結後、売掛金を売却することで、御社の指定の口座に資金が入金されます。
+各ファクタリング会社から審査後見積りが提示されます。
+各社の手数料を比較し、最適な企業に決定しましょう。
 
-以上、設置までしっかりとサポートさせて頂きますので、よろしくお願い致します。
+【STEP.03】契約締結後、即入金完了
 
+条件の良い会社へご連絡頂き、契約締結を行います。
+契約完了後、即時入金がされ完了となります。
+__________________________________________________________________________________________
+
+以上、完了までしっかりとサポートさせて頂きますので、何卒よろしくお願い致します。
 
 --------------------------
 会社名: <%= @estimate.co%>
@@ -37,8 +42,6 @@ URL: <%= @estimate.url%>
 --------------------------
 
 
-株式会社Ri-Plus
-電話番号：050-5480-1131
-Mail：info@ri-plus.jp
-URL：https://ri-plus.jp
-所在地：〒104-0061 東京都中央区銀座一丁目22番11号2階
+ファクタリング一括見積
+Mail：factaring@factoru.jp
+URL：https://f.factoru.jp/
