--- a/app/views/estimates/thanks.html.slim
+++ b/app/views/estimates/thanks.html.slim
@@ -1,15 +1,48 @@
-- set_meta_tags  title: ''
-- set_meta_tags  description: ''
-
 br
-.tops-wrapper.center
- h1.headline  ファクタリング一括見積を頂きありがとうございます。
+ .tops-wrapper
+    h2.headline
+       | ファクタリング一括見積もりをご利用いただきありがとうございました。今後の流れをご確認下さい。
 
- p.bold.center
-   | 内容を確認し、問題なければ各ファクタリング会社にご紹介を進めさせて頂きます。内容の不足等御座いましたら、当社担当者よりご連絡させて頂く場合がございます。よろしくお願い致します。
- br
+ ul.flow.center
+  li
+    dl
+      dt
+        span.icon
+          | STEP.01
+        | 3~5社のファクタリング会社から自動返信メールが到着
+      dd.center
+        | 頂いた内容を元に、ファクタリング会社の選定を行います。
+        br
+        | 選定後、ファクタリング会社から問い合わせ完了通知が届きます。
+        br
+        | 追ってお電話が入りますので、売掛請求書をご準備の上対応お願いします。
+        br
+        .red 
+         | ※通過率を上げるため可能であれば全てのファクタリング会社への対応をお願いします。
+  li
+    dl
+      dt
+        span.icon
+          | STEP.02
+        | 条件の良いファクタリング会社を選定
+      dd.center
+        | 各ファクタリング会社から審査後見積りが提示されます。
+        br
+        | 各社の手数料を比較し、最適な企業に決定しましょう。
+        br
+  li
+    dl
+      dt
+        span.icon
+          | STEP.03
+        | 契約締結後、即入金完了
+      dd.center
+        | 条件の良い会社へご連絡頂き、契約締結を行います。
+        br
+        | 契約完了後、即時入金がされ完了となります。
+
  .center
-  = link_to "トップページへ戻る", "/", class:"btn btn-thanks"
+  = link_to "トップページへ戻る", "/", class:"btn btn-primary"
 br
 br
 
