--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -21,6 +21,7 @@ br
            | \ カンタン60秒入力! /
         =link_to '/estimates/new' do
          =image_tag 'click3.webp', width: '100%', class: 'center'
+        
 
 br
 br
@@ -124,6 +125,9 @@ br
      | \ カンタン60秒入力! /
    = link_to "/estimates/new" do
      =image_tag 'click3.webp', width: '70%', class: 'center'
+  .center   
+    | ※個人の方は申し込みできません。
+
 
 br
 br
@@ -167,6 +171,9 @@ br
      | \ カンタン60秒入力! /
    = link_to "#anchor" do
      =image_tag 'click3.webp', width: '70%', class: 'center'
+  .center   
+    | ※個人の方は申し込みできません。
+
 
 br
 br
@@ -252,6 +259,8 @@ br
      | \ カンタン60秒入力! /
    = link_to "/estimates/new" do
      =image_tag 'click3.webp', width: '70%', class: 'center'
+  .center   
+    | ※個人の方は申し込みできません。
 
 br
 br
