--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1356,3 +1356,130 @@ table.company {
   margin-top:120px;
   padding-right:30px;
  }
+
+
+ /*posts show*/
+#review-detail{
+  margin:-10px 20px;
+   .headline-first {
+       color:black;
+       font-weight:bold;
+       font-size:3.5rem;
+       margin-bottom:30px;
+       @media screen and ( max-width:479px ){font-size:2.0rem;}
+      }
+   .headline-first:first-letter {
+       color:var(--main-color);
+       font-size:4.0rem;
+       @media screen and (max-width:479px ){fint-size:1.8rem;}
+       }
+   .contents {
+    text-align:center;
+    font-size:26px;
+    font-weight:bold;
+    margin-top:20px;
+   }
+
+   h2 {
+       color:black;
+       font-weight:bold;
+       font-size:3.0rem;
+       margin-top:50px;
+       @media screen and ( max-width:479px ){font-size:2.0rem;}
+      }
+   h2.before {
+       color:var(--main-color);
+       font-size:3.5rem;
+       @media screen and (max-width:479px ){fint-size:1.8rem;}
+       }
+
+    h3 {
+        position: relative;
+        display: inline-block;
+        padding: 0 55px;
+        font-size:2.5rem;
+        font-weight:bold;
+        text-align:left;
+        padding-left:70px;
+        margin-top:50px;
+       }
+    h3:before, h4:after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        display: inline-block;
+        width: 45px;
+        height: 2px;
+        border-top: solid 2px var(--main-color);
+        border-bottom: solid 2px var(--main-color);
+        }
+    h3:before {
+       left:0;
+        }
+    h3:after {
+        right: 0;
+        }
+
+    h4 {
+        position: relative;
+        display: inline-block;
+        padding: 0 55px;
+        font-size:2.0rem;
+        font-weight:bold;
+        text-align:left;
+        padding-left:70px;
+        margin-top:50px;
+       }
+    h4:before, h4:after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        display: inline-block;
+        width: 45px;
+        height: 2px;
+        border-top: solid 2px var(--main-color);
+        border-bottom: solid 2px var(--main-color);
+        }
+    h4:before {
+       left:0;
+        }
+    h4:after {
+        right: 0;
+        }
+    
+    h5 {
+       color: var(--main-color);
+       margin-left:60px;
+       border: dotted var(--main-color) 2px;/*ドット 色 太さ*/
+       padding: 0.5em 0.5em 0.5em 2em;
+       line-height: 1.5;
+       width:60%;
+       text-align:left;
+         }
+    .body-base {
+      padding:0px 30px;
+      line-height:2.5;
+      text-align:left;
+      font-size:16px;
+    }
+    .inquiry {
+  
+    }
+ }
+
+ .put {/*親div*/
+  position: relative;/*相対配置*/
+  }
+
+.put p.prefecture {
+  position: absolute;/*絶対配置*/
+  color: white;/*文字は白に*/
+  font-weight: bold;
+  top: 0;
+  left: 0;
+  background-color:var(--main-color);
+  padding:2px 10px;
+  @media screen and ( max-width:479px ){
+        margin-top: 15px;
+        margin-left: 44px;}
+  }
