--- a/app/views/estimate_mailer/send_email.text.erb
+++ b/app/views/estimate_mailer/send_email.text.erb
@@ -30,6 +30,7 @@ ________________________________________________________________________________
 
 --------------------------
 会社名: <%= @estimate.co%>
+種別: <%= @estimate.select%>
 担当者名: <%= @estimate.name%>（<%= @estimate.name_kana%>）
 電話番号: <%= @estimate.tel%>
 住所: <%= @estimate.address%>
