--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -21,9 +21,9 @@ link[href="../css/froala_style.min.css" rel="stylesheet" type="text/css"]
 = display_meta_tags(default_meta_tags)
 = favicon_link_tag('favicon.ico')
 <!-- Google tag (gtag.js) -->
-script[async src="https://www.googletagmanager.com/gtag/js?id=G-6K45EPEPJV"]
+script[async src="https://www.googletagmanager.com/gtag/js?id=AW-11193164988"]
 script
  | window.dataLayer = window.dataLayer || [];
  | function gtag(){dataLayer.push(arguments);}
  | gtag('js', new Date());
- | gtag('config', 'G-6K45EPEPJV');
+ | gtag('config', 'AW-11193164988');
