--- a/app/views/estimates/confirm.html.slim
+++ b/app/views/estimates/confirm.html.slim
@@ -123,5 +123,12 @@
           = f.hidden_field :remarks
           = @estimate.remarks
       tr
-        td colspan="3"
-          = f.submit "送信", class:"btn btn-primary"
+       td colspan="3"
+        = f.submit "送信", class:"btn btn-primary", data: {behavior: "fb-track"}
+      javascript:
+       document.addEventListener('DOMContentLoaded', function(){
+        var button = document.querySelector("[data-behavior='fb-track']");
+        button.addEventListener('click', function() {
+          fbq('track', 'CompleteRegistration');
+        });
+       });
