--- a/app/views/estimates/thanks.html.slim
+++ b/app/views/estimates/thanks.html.slim
@@ -51,3 +51,5 @@ script
   |  window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-858090558');
 script
   |  gtag('event', 'conversion', {'send_to': 'AW-585627916/TzzVCIjG_qQDEIzyn5cC'});
+script
+  | fbq('track', 'CompleteRegistration');
