--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -7,23 +7,15 @@ script
 = csrf_meta_tags
 = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
 = stylesheet_link_tag rel="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-script[src="https://ajax.googleapis.com/js/jquery-3.3.1/slim.min.js"]
-script[src="https://ajax.googleapis.com/js/bootstrap.bundle.min.js"]
 script[src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"]
-
-link[href="node_modules/froala-editor/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css"]
-script[type="text/javascript" src="node_modules/froala-editor/js/froala_editor.pkgd.min.js"]
-link[href="https://cdn.jsdelivr.net/npm/froala-editor@latest/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css"]
-script[type="text/javascript" src="https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js"]
-link[href="../css/froala_style.min.css" rel="stylesheet" type="text/css"]
 
 = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 = display_meta_tags(default_meta_tags)
 = favicon_link_tag('favicon.ico')
 <!-- Google tag (gtag.js) -->
-script[async src="https://www.googletagmanager.com/gtag/js?id=AW-11193164988"]
+script[async src="https://www.googletagmanager.com/gtag/js?id=G-NR0Q5H8J4K"]
 script
  | window.dataLayer = window.dataLayer || [];
  | function gtag(){dataLayer.push(arguments);}
  | gtag('js', new Date());
- | gtag('config', 'AW-11193164988');
+ | gtag('config', 'G-NR0Q5H8J4K');
